target/generated-sources/antlr4/ee/ioc/cs/vsle/parser/SpecificationLanguageParser.java
// Generated from SpecificationLanguage.g4 by ANTLR 4.1
package ee.ioc.cs.vsle.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SpecificationLanguageParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__33=1, T__32=2, T__31=3, T__30=4, T__29=5, T__28=6, T__27=7, T__26=8, 
		T__25=9, T__24=10, T__23=11, T__22=12, T__21=13, T__20=14, T__19=15, T__18=16, 
		T__17=17, T__16=18, T__15=19, T__14=20, T__13=21, T__12=22, T__11=23, 
		T__10=24, T__9=25, T__8=26, T__7=27, T__6=28, T__5=29, T__4=30, T__3=31, 
		T__2=32, T__1=33, T__0=34, NUMBER=35, INTEGER=36, STRING=37, IDENTIFIER=38, 
		ALIAS_ELEMENT_REF=39, WS=40, COMMENT=41, BLOCK_COMMENT=42, JAVA_BEFORE_SPEC=43, 
		JAVA_AFTER_SPEC=44;
	public static final String[] tokenNames = {
		"<INVALID>", "'long'", "'short'", "']'", "','", "'['", "'-'", "'*'", "'('", 
		"'int'", "'false'", "'{'", "'double'", "'boolean'", "'}'", "'float'", 
		"'true'", "'specification'", "'static'", "'char'", "'super'", "'->'", 
		"'byte'", "'|-'", "'^'", "'.'", "')'", "'+'", "'='", "';'", "'*.'", "'alias'", 
		"'const'", "'new'", "'/'", "NUMBER", "INTEGER", "STRING", "IDENTIFIER", 
		"ALIAS_ELEMENT_REF", "WS", "COMMENT", "BLOCK_COMMENT", "JAVA_BEFORE_SPEC", 
		"JAVA_AFTER_SPEC"
	};
	public static final int
		RULE_metaInterfase = 0, RULE_superMetaInterface = 1, RULE_specification = 2, 
		RULE_statement = 3, RULE_variableDeclaration = 4, RULE_variableModifier = 5, 
		RULE_variableDeclarator = 6, RULE_specificationVariableDeclaration = 7, 
		RULE_specificationVariableDeclarator = 8, RULE_variableAssignment = 9, 
		RULE_axiom = 10, RULE_subtask = 11, RULE_subtaskList = 12, RULE_exceptionList = 13, 
		RULE_goal = 14, RULE_aliasDeclaration = 15, RULE_aliasStructure = 16, 
		RULE_wildcardAlias = 17, RULE_aliasDefinition = 18, RULE_type = 19, RULE_classType = 20, 
		RULE_primitiveType = 21, RULE_equation = 22, RULE_expression = 23, RULE_term = 24, 
		RULE_array = 25, RULE_inArrayVariableAssigner = 26, RULE_variableAssigner = 27, 
		RULE_variableInitializer = 28, RULE_variableIdentifier = 29, RULE_variableIdentifierList = 30;
	public static final String[] ruleNames = {
		"metaInterfase", "superMetaInterface", "specification", "statement", "variableDeclaration", 
		"variableModifier", "variableDeclarator", "specificationVariableDeclaration", 
		"specificationVariableDeclarator", "variableAssignment", "axiom", "subtask", 
		"subtaskList", "exceptionList", "goal", "aliasDeclaration", "aliasStructure", 
		"wildcardAlias", "aliasDefinition", "type", "classType", "primitiveType", 
		"equation", "expression", "term", "array", "inArrayVariableAssigner", 
		"variableAssigner", "variableInitializer", "variableIdentifier", "variableIdentifierList"
	};

	@Override
	public String getGrammarFileName() { return "SpecificationLanguage.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }


		

	public SpecificationLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MetaInterfaseContext extends ParserRuleContext {
		public SuperMetaInterfaceContext superMetaInterface() {
			return getRuleContext(SuperMetaInterfaceContext.class,0);
		}
		public SpecificationContext specification() {
			return getRuleContext(SpecificationContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(SpecificationLanguageParser.IDENTIFIER, 0); }
		public MetaInterfaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metaInterfase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).enterMetaInterfase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).exitMetaInterfase(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationLanguageVisitor ) return ((SpecificationLanguageVisitor<? extends T>)visitor).visitMetaInterfase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetaInterfaseContext metaInterfase() throws RecognitionException {
		MetaInterfaseContext _localctx = new MetaInterfaseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_metaInterfase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62); match(17);
			setState(63); match(IDENTIFIER);
			setState(65);
			_la = _input.LA(1);
			if (_la==20) {
				{
				setState(64); superMetaInterface();
				}
			}

			setState(67); match(11);
			setState(68); specification();
			setState(69); match(14);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SuperMetaInterfaceContext extends ParserRuleContext {
		public List<ClassTypeContext> classType() {
			return getRuleContexts(ClassTypeContext.class);
		}
		public ClassTypeContext classType(int i) {
			return getRuleContext(ClassTypeContext.class,i);
		}
		public SuperMetaInterfaceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_superMetaInterface; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).enterSuperMetaInterface(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).exitSuperMetaInterface(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationLanguageVisitor ) return ((SpecificationLanguageVisitor<? extends T>)visitor).visitSuperMetaInterface(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SuperMetaInterfaceContext superMetaInterface() throws RecognitionException {
		SuperMetaInterfaceContext _localctx = new SuperMetaInterfaceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_superMetaInterface);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71); match(20);
			setState(72); classType();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(73); match(4);
				setState(74); classType();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpecificationContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public SpecificationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specification; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).enterSpecification(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).exitSpecification(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationLanguageVisitor ) return ((SpecificationLanguageVisitor<? extends T>)visitor).visitSpecification(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecificationContext specification() throws RecognitionException {
		SpecificationContext _localctx = new SpecificationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_specification);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 2) | (1L << 5) | (1L << 6) | (1L << 8) | (1L << 9) | (1L << 12) | (1L << 13) | (1L << 15) | (1L << 18) | (1L << 19) | (1L << 21) | (1L << 22) | (1L << 31) | (1L << 32) | (1L << NUMBER) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(80); statement();
				setState(81); match(29);
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public GoalContext goal() {
			return getRuleContext(GoalContext.class,0);
		}
		public AxiomContext axiom() {
			return getRuleContext(AxiomContext.class,0);
		}
		public EquationContext equation() {
			return getRuleContext(EquationContext.class,0);
		}
		public AliasDeclarationContext aliasDeclaration() {
			return getRuleContext(AliasDeclarationContext.class,0);
		}
		public VariableAssignmentContext variableAssignment() {
			return getRuleContext(VariableAssignmentContext.class,0);
		}
		public AliasDefinitionContext aliasDefinition() {
			return getRuleContext(AliasDefinitionContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationLanguageVisitor ) return ((SpecificationLanguageVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(95);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(88); variableDeclaration();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(89); variableAssignment();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(90); axiom();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(91); goal();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(92); aliasDeclaration();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(93); aliasDefinition();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(94); equation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclarationContext extends ParserRuleContext {
		public VariableModifierContext variableModifier() {
			return getRuleContext(VariableModifierContext.class,0);
		}
		public VariableDeclaratorContext variableDeclarator(int i) {
			return getRuleContext(VariableDeclaratorContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<VariableDeclaratorContext> variableDeclarator() {
			return getRuleContexts(VariableDeclaratorContext.class);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).enterVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).exitVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationLanguageVisitor ) return ((SpecificationLanguageVisitor<? extends T>)visitor).visitVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclarationContext variableDeclaration() throws RecognitionException {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_la = _input.LA(1);
			if (_la==18 || _la==32) {
				{
				setState(97); variableModifier();
				}
			}

			setState(100); type();
			setState(101); variableDeclarator();
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(102); match(4);
				setState(103); variableDeclarator();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableModifierContext extends ParserRuleContext {
		public VariableModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableModifier; }
	 
		public VariableModifierContext() { }
		public void copyFrom(VariableModifierContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class StaticVariableContext extends VariableModifierContext {
		public StaticVariableContext(VariableModifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).enterStaticVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).exitStaticVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationLanguageVisitor ) return ((SpecificationLanguageVisitor<? extends T>)visitor).visitStaticVariable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConstantVariableContext extends VariableModifierContext {
		public ConstantVariableContext(VariableModifierContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).enterConstantVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).exitConstantVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationLanguageVisitor ) return ((SpecificationLanguageVisitor<? extends T>)visitor).visitConstantVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableModifierContext variableModifier() throws RecognitionException {
		VariableModifierContext _localctx = new VariableModifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variableModifier);
		try {
			setState(111);
			switch (_input.LA(1)) {
			case 18:
				_localctx = new StaticVariableContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(109); match(18);
				}
				break;
			case 32:
				_localctx = new ConstantVariableContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(110); match(32);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableDeclaratorContext extends ParserRuleContext {
		public VariableDeclaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDeclarator; }
	 
		public VariableDeclaratorContext() { }
		public void copyFrom(VariableDeclaratorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SpecificationVariableContext extends VariableDeclaratorContext {
		public TerminalNode IDENTIFIER() { return getToken(SpecificationLanguageParser.IDENTIFIER, 0); }
		public SpecificationVariableDeclarationContext specificationVariableDeclaration() {
			return getRuleContext(SpecificationVariableDeclarationContext.class,0);
		}
		public SpecificationVariableContext(VariableDeclaratorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).enterSpecificationVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).exitSpecificationVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationLanguageVisitor ) return ((SpecificationLanguageVisitor<? extends T>)visitor).visitSpecificationVariable(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VariableDeclaratorInitializerContext extends VariableDeclaratorContext {
		public TerminalNode IDENTIFIER() { return getToken(SpecificationLanguageParser.IDENTIFIER, 0); }
		public VariableInitializerContext variableInitializer() {
			return getRuleContext(VariableInitializerContext.class,0);
		}
		public VariableDeclaratorInitializerContext(VariableDeclaratorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).enterVariableDeclaratorInitializer(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).exitVariableDeclaratorInitializer(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationLanguageVisitor ) return ((SpecificationLanguageVisitor<? extends T>)visitor).visitVariableDeclaratorInitializer(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VariableDeclaratorAssignerContext extends VariableDeclaratorContext {
		public TerminalNode IDENTIFIER() { return getToken(SpecificationLanguageParser.IDENTIFIER, 0); }
		public VariableAssignerContext variableAssigner() {
			return getRuleContext(VariableAssignerContext.class,0);
		}
		public VariableDeclaratorAssignerContext(VariableDeclaratorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).enterVariableDeclaratorAssigner(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).exitVariableDeclaratorAssigner(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationLanguageVisitor ) return ((SpecificationLanguageVisitor<? extends T>)visitor).visitVariableDeclaratorAssigner(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclaratorContext variableDeclarator() throws RecognitionException {
		VariableDeclaratorContext _localctx = new VariableDeclaratorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variableDeclarator);
		int _la;
		try {
			setState(128);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new VariableDeclaratorInitializerContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(113); match(IDENTIFIER);
				setState(116);
				_la = _input.LA(1);
				if (_la==28) {
					{
					setState(114); match(28);
					setState(115); variableInitializer();
					}
				}

				}
				break;

			case 2:
				_localctx = new VariableDeclaratorAssignerContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(118); match(IDENTIFIER);
				{
				setState(119); match(28);
				setState(120); variableAssigner();
				}
				}
				break;

			case 3:
				_localctx = new SpecificationVariableContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(121); match(IDENTIFIER);
				setState(126);
				_la = _input.LA(1);
				if (_la==8) {
					{
					setState(122); match(8);
					setState(123); specificationVariableDeclaration();
					setState(124); match(26);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpecificationVariableDeclarationContext extends ParserRuleContext {
		public SpecificationVariableDeclaratorContext specificationVariableDeclarator(int i) {
			return getRuleContext(SpecificationVariableDeclaratorContext.class,i);
		}
		public List<SpecificationVariableDeclaratorContext> specificationVariableDeclarator() {
			return getRuleContexts(SpecificationVariableDeclaratorContext.class);
		}
		public SpecificationVariableDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specificationVariableDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).enterSpecificationVariableDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).exitSpecificationVariableDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationLanguageVisitor ) return ((SpecificationLanguageVisitor<? extends T>)visitor).visitSpecificationVariableDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecificationVariableDeclarationContext specificationVariableDeclaration() throws RecognitionException {
		SpecificationVariableDeclarationContext _localctx = new SpecificationVariableDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_specificationVariableDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); specificationVariableDeclarator();
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(131); match(4);
				setState(132); specificationVariableDeclarator();
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpecificationVariableDeclaratorContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(SpecificationLanguageParser.IDENTIFIER, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SpecificationVariableDeclaratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specificationVariableDeclarator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).enterSpecificationVariableDeclarator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).exitSpecificationVariableDeclarator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationLanguageVisitor ) return ((SpecificationLanguageVisitor<? extends T>)visitor).visitSpecificationVariableDeclarator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SpecificationVariableDeclaratorContext specificationVariableDeclarator() throws RecognitionException {
		SpecificationVariableDeclaratorContext _localctx = new SpecificationVariableDeclaratorContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_specificationVariableDeclarator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138); match(IDENTIFIER);
			setState(139); match(28);
			setState(140); expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableAssignmentContext extends ParserRuleContext {
		public VariableIdentifierContext variableIdentifier() {
			return getRuleContext(VariableIdentifierContext.class,0);
		}
		public VariableAssignerContext variableAssigner() {
			return getRuleContext(VariableAssignerContext.class,0);
		}
		public VariableAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableAssignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).enterVariableAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SpecificationLanguageListener ) ((SpecificationLanguageListener)listener).exitVariableAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SpecificationLanguageVisitor ) return ((SpecificationLanguageVisitor<? extends T>)visitor).visitVariableAssignment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableAssignmentContext variableAssignment() throws RecognitionException {
		VariableAssignmentContext _localctx = new VariableAssignmentContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variableAssignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); variableIdentifier();
			setState(143); match(28);
			setState(144); variableAssigner();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
